--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-<img src="garfield-computer.png" style="text-align:center">
+<!DOCTYPE html>
+<head>
+  <title>Garfield Solutions</title>
+</head>
+<body style="text-align:center">
+  <img src="garfield-computer.png" alt="Garfield on a computer">
